# Clustering

./: CMakeLists.txt  DissimilarityMatrix.h  LICENSE  Pam.sln  Pam.vcxproj  Pam.vcxproj.filters  pam.cpp
src/: DissimilarityMatrix.h  MpiInitializer.cpp  MpiInitializer.h  MpiSupport.cpp  MpiSupport.h  PartitioningAroundMedoids.h  Vector2d.h  main.cpp
src_nothreads/: DissimilarityMatrix.h  MpiSupport.cpp  MpiSupport.h  PartitioningAroundMedoids.h  main.cpp
test_data/: 700.dissimilarity_matrix.txt  700.vectors.txt  vectors.1024.8.txt  vectors.2048.8.txt  vectors.3072.8.txt  vectors.4096.8.txt  vectors.5120.8.txt  vectors.6144.8.txt
